apps/it-tools/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  namespace: it-tools
spec:
  type: NodePort
  selector:
    app: it-tools
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
