apps/it-tools/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it-tools
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: it-tools.g2net.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: it-tools
                port:
                  number: 80
